[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutad-moviebox-api"
version = "1.0.0"
description = "CUTAD MovieBox API — Movie, Series, K-Drama, Anime & lebih banyak lagi"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "CUTADX", email = "akunmyid@gmail.com" }]
keywords = ["cutad", "moviebox", "streaming", "api", "sdk", "hls", "subtitle"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://www.cutad.web.id/docs"
Repository = "https://github.com/rudiansyah1998/moviebox-api"
Documentation = "https://www.cutad.web.id/docs"
Issues = "https://github.com/rudiansyah1998/moviebox-api/issues"

[tool.setuptools]
package-dir = { "" = "src-py" }

[tool.setuptools.packages.find]
where = ["src-py"]
include = ["cutad_client*"]
